# events-face

./: pyproject.toml
src/: db.sqlite3  urls.py
src/accounts/: apps.py  serializers.py  urls.py  views.py
src/core/: asgi.py  settings.py  wsgi.py
src/events/: admin.py  models.py  serializers.py  views.py
src/events/migrations/: 0001_initial.py
